# mika

./: test.rest
backstage/: README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backstage/src/: App.vue  main.ts
backstage/src/router/: index.ts
forestage/: README.md  package.json  pnpm-lock.yaml
server/: .env  Cargo.toml  config.toml
server/entity/: Cargo.toml
server/entity/src/: article.rs  category.rs  comment.rs  forum.rs  lib.rs  menu.rs  prelude.rs  r_article_tag.rs  r_role_menu.rs  r_role_rersource.rs  r_user_role.rs  r_user_role_forum.rs  resource.rs  role.rs  tag.rs  user.rs
server/migration/src/: m20220101_000001_create_table.rs  main.rs
server/src/: app.rs  config.rs  init.rs  lib.rs  main.rs  result.rs
server/src/api/: article.rs  category.rs  comment.rs  menu.rs  mod.rs  resource.rs  role.rs  tag.rs  user.rs
server/src/dao/: article.rs  category.rs  comment.rs  menu.rs  mod.rs  resource.rs  role.rs  tag.rs  user.rs
server/src/dao/util/: dataperm.rs  mod.rs
server/src/extractor/: jwt.rs  mod.rs  rbac.rs
server/src/middleware/: mod.rs  rbac.rs
server/src/model/: mod.rs
server/src/model/req/: article.rs  category.rs  comment.rs  menu.rs  mod.rs  resource.rs  role.rs  tag.rs  universal.rs  user.rs
server/src/model/resp/: article.rs  category.rs  mod.rs  tag.rs  user.rs
server/src/router/: backrouter.rs  mod.rs
server/src/service/: article.rs  category.rs  comment.rs  menu.rs  mod.rs  resource.rs  role.rs  tag.rs  user.rs
server/src/util/: apidoc.rs  mod.rs  pwd.rs
(+4 files in other folders)
