[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=[".","entity","migration"]
[profile.release]
lto=true
codegen-units = 1
strip= "debuginfo"


[dependencies]
entity={path="entity"}
migration={path="migration"}
axum = { version = "0.6.20", features = ["tracing", "headers"] }
sea-orm = { version = "0.12.4", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1.33.0", features = ["macros","rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
utoipa = { version = "4.0.0", features = ["axum_extras", "uuid"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
config = "0.13.3"
serde = { version = "1.0.190", features = ["derive"] }
once_cell = "1.18.0"
async-once-cell = "0.5.3"
garde = { version = "0.16.2", features = ["email", "url"] }
axum-valid = { version = "0.11.0", default-features = false, features = ["garde", "basic"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
argon2 = "0.5.2"
jsonwebtoken = "9.1.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde_json = "1.0.108"
tower = "0.4.13"
http = "0.2.9"
async-trait = "0.1.74"
chrono = "0.4.31"
futures-util = "0.3.29"
pin-project = "1.1.3"
